kustomize/overlays/nerc-ocp-prod/opendatapolicing/ingresses/opendatapolicing/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: opendatapolicing
  namespace: scsj-86c3ca
  annotations:
    cert-manager.io/issuer: letsencrypt-issuer
    acme.cert-manager.io/http01-ingress-class: openshift-default
spec:
  ingressClassName: openshift-default
  tls:
  - hosts:
    - opendatapolicing.computate.org
    secretName: opendatapolicing-cert
  rules:
  - host: opendatapolicing.computate.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: opendatapolicing-web
            port:
              number: 8080
